adding groups & environments; updating contracts to remove dependencies from component services, but add env information
