# app/models/app_environment.rb
@@ -1,0 +1,4 @@
+class AppEnvironment < ApplicationRecord
+  belongs_to :app
+  belongs_to :environment
+end
