# app/models/environment.rb
@@ -1,0 +1,6 @@
+class Environment < ApplicationRecord
+  aas_many :app_environments
+  has_many :apps, through: :app_environments
+
+  validates :name, presence: true
+end
